<resources>
    <string name="app_name">DateMeal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_gender_select">GenderSelectActivity</string>
    <!-- Strings related to register -->
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <!-- Strings related to Edit Profile -->
    <string name="edit_profile">Edit Profile</string>

    <!-- Strings related to Database -->
    <string name="get_course_url">http://datemeal.esy.es/select_course.php</string>
    <string name="register_member_url">http://datemeal.esy.es/register_member_1.php</string>



</resources>
